syntax = "proto3";

option csharp_namespace = "Auth";

package auth;


service Authorizer {
  // Sends a greeting
  rpc Login (LoginRequest) returns (LoginReply);
}

enum AuthLoginType {
  AUTH_LOGIN_TYPE_NONE = 0;
  AUTH_LOGIN_TYPE_ACCOUNT = 1;
}

enum AppTypeId {
  APP_TYPE_ID_NONE = 0;
  APP_TYPE_ID_DOT_IM = 1;
}

message LoginRequest {
  AuthLoginType login_type = 1;
  string account = 2; 
  string password = 3;
  
  int32 app_id = 4;
}

message LoginReply {
  string token = 1;
  int64 account_id = 2;
}
